
2007-05-29  Lynn Garren

	* src/GenVertex.cc: initialize range in default constructor
	* src/IO_Ascii*.cc: make sure every object is properly deleted
	* test/testHepMCIteration.cc: add iterator test

  --------------------------  HepMC-2.00.03  --------------------------

2007-04-23  Lynn Garren

	* bootstrap, configure.in, doc/Makefile.am:
	  To avoid problems with different versions of latex, just build
	  the documents during the bootstrap step.  
	* doc/buildDoc.sh: builds the documents if doxygen and latex are present

2007-04-20  Lynn Garren

        * HepMC/include/PythiaWrapper*.h:
          inline the method definitions to avoid conflicts
	* examples/initPythia.cc: put pythia intialization in a separate
	  file so we can test PythiaWrapper

  --------------------------  HepMC-2.00.02  --------------------------

2007-02-12 Lynn Garren

	* test/testHepMC.sh.in: works on Windows (Cygwin), MacOSX, and Linux

2007-02-07 Lynn Garren

	* doc/doxygen-template: provide an html template

2007-01-30 Lynn Garren

	* doc/doxygen.conf: use doxygen 1.5.1

2007-01-30 Lynn Garren

	* examples/example_BuildEventFromScratch.cc: add example of 
	  conversion from SimpleVector to HepLorentzVector
	* examples/VectorConversion.h: VectorConversion.h is meant as a 
	  template for user code converting to the vector of your choice.

2007-01-29 Lynn Garren

	* fix everything so doxygen will create a useful reference manual
	  nearly every file has been touched, but only the comments changed


2007-01-25 Lynn Garren

	* examples/example_MyPythiaRead.cc: read in the events you just wrote
	* examples/*.cc: put all uses of IO_Ascii within an explicit scope

	* configure.in, doc/Makefile.am: if latex is found, get the path

	* test/testHepMC.sh.in: make the diff work for MacOSX

	--------------------  HepMC-02-00-01  ---------------------------------

2007-01-17 Lynn Garren

	* test/testSimpleVector.cc: exercise the vector methods

2007-01-16 Lynn Garren
